[package]
name = "natpmp-server"
version = "0.1.3"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
natpmp = "0.5"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
chrono = { version = "0.4", features = ["serde"] }
